--- a/.aliasrc
+++ b/.aliasrc
@@ -10,10 +10,12 @@ alias ....="cd ../../.."
 
 alias ls="ls -al --color=auto"
 
+alias gi="git init"
+alias gl="git log"
 alias gs="git status"
 alias ga="git add"
+alias gaa="git add ."
 alias gc="git commit"
-alias gco="git checkout"
 alias gco="git checkout"
 alias gd="git diff"
 alias gdc="git diff --cached"
