--- a/.aliasrc
+++ b/.aliasrc
@@ -16,6 +16,7 @@ alias gs="git status"
 alias ga="git add"
 alias gaa="git add ."
 alias gc="git commit"
+alias gpom="git push -u origin master"
 alias gco="git checkout"
 alias gd="git diff"
 alias gdc="git diff --cached"
